plugins {
    id 'fabric-loom' version '1.10.1'
    id 'maven-publish'
}

version = project.findProperty('mod.version') ?: '1.0.0'
group = project.findProperty('maven.group') ?: 'com.serbanstein'

base {
    archivesName = project.findProperty('archives.base.name') ?: 'voidclam'
}

repositories {
    mavenCentral()
    maven { url 'https://maven.fabricmc.net/' }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.findProperty('minecraft.version')}"
    mappings "net.fabricmc:yarn:${project.findProperty('yarn.mappings')}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.findProperty('loader.version')}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.findProperty('fabric.version')}"
    implementation "com.google.code.gson:gson:2.10.1"
    include "com.google.code.gson:gson:2.10.1"
    implementation "org.slf4j:slf4j-api:1.7.36"
    include "org.slf4j:slf4j-api:1.7.36"
}

processResources {
    inputs.property 'version', project.version
    filteringCharset 'UTF-8'
    filesMatching('fabric.mod.json') {
        expand 'version': project.version
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
    withSourcesJar()
}

jar {
    from('LICENSE') {
        rename { "${it}_${project.base.archivesName.get()}" }
    }
}

loom {
    runs {
        server {
            server()
            runDir 'run'
        }
    }
}
